# stability-toolkit

./: .gitignore  CURSOR_INTEGRATION_GUIDE.md  Contributing  GITHUB_INTEGRATION_GUIDE.md  MANIFEST.in  PostAgent  README.md  TestToolkit  pyproject.toml  requirements.txt  setup.py  stability_toolkit.py  test_stability_toolkit.py  test_stability_toolkit_live.py  validate_mcp.py
.github/workflows/: ci.yml  test.yml
Notes/: git
libs/community/langchain_community/utilities/: stability.py
servers/node/: PUBLISH_INSTRUCTIONS.md  README.md  SETUP.md  comprehensive_test.js  index.js  package-lock.json  package.json  stbl-mcp-0.1.0.tgz  test_event_system.js  tsconfig.json
servers/node/src/: address-discovery.ts  api.ts  events.ts  index.ts  storage.ts  tools.ts
tasks/: 01-2-setup-nodejs-mcp-server.md  02-3-migrate-python-tools-to-mcp.md  03-2-implement-core-mcp-endpoints.md  04-3-add-zkt-api-integration.md  05-4-build-event-subscription-system.md  06-3-create-event-mcp-tools.md  07-3-test-event-system.md  08-3-create-base-smart-contract-templates.md  09-4-build-contract-analysis-tools.md  10-3-create-utility-contracts.md  11-3-implement-contract-templates.md  12-4-build-deployment-automation.md  13-3-implement-token-creation-tools.md  14-4-create-nft-specific-features.md  15-3-add-token-utility-features.md  16-3-create-comprehensive-test-suite.md  17-4-build-example-applications.md  18-2-write-documentation.md  19-5-add-natural-language-processing.md  20-5-build-contract-intelligence.md  21-4-create-data-management-tools.md  22-4-security-hardening.md  23-4-performance-optimization.md  24-3-create-deployment-package.md  25-2-launch-preparation.md  26-3-port-python-toolkit-patterns.md  27-2-leverage-existing-work.md  28-3-maintain-compatibility.md  README.md
