[tool.poetry]
name = "stability-toolkit"
version = "0.1.0"
description = "A LangChain-compatible toolkit for interacting with the Stability blockchain via ZKT API."
authors = ["Stability Protocol <dev@stabilityprotocol.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "stability_toolkit.py" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.1.0"
openai = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
