[tool.poetry]
name = "stability-toolkit"
version = "1.0.0"
description = "A production-ready LangChain toolkit for Stability blockchain interactions without gas fees"
authors = ["Juliun <contact@stabilityprotocol.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nuljui/stability-toolkit"
repository = "https://github.com/nuljui/stability-toolkit"
documentation = "https://github.com/nuljui/stability-toolkit#readme"
keywords = ["langchain", "blockchain", "stability", "zkt", "web3", "ai", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"
langchain-core = "^0.1.0"
pydantic = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
langchain-openai = "^0.1.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stbl-mcp"
version = "0.1.0"
description = "Stability Model Context Protocol (MCP) - AI agents + blockchain with zero gas fees"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "STBL-MCP Contributors"}
]
keywords = ["blockchain", "ai", "mcp", "stability", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "mcp>=1.11.0",
    "requests>=2.31.0",
    "langchain-core>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/nuljui/stbl-mcp"
Repository = "https://github.com/nuljui/stbl-mcp.git"
Documentation = "https://github.com/nuljui/stbl-mcp#readme"
"Bug Tracker" = "https://github.com/nuljui/stbl-mcp/issues"

[project.scripts]
stbl-mcp = "stability_mcp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stability_*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]
